--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "skinbot",
   "author": "Similiukas",
-  "type": "module",
   "scripts": {
-    "compile": "tsc && npm run copy",
-    "clean": "rimraf dist/",
-    "copy": "npx copyfiles .env dist/ && npx copyfiles -u 1 src/**/*.json dist/",
-    "build": "npm run lint && npm run prettier && npm run clean && npm run compile",
-    "start": "npm run copy && cd dist && node . && cd ..",
-    "dev": "npm run clean && tsc-watch --onSuccess \"npm run start\"",
-    "prod": "npm run build && npm run start"
+    "start": "node dist/index.js",
+    "dev": "rimraf dist && tsc-watch --onSuccess \"node dist/index.js\""
   },
   "dependencies": {
-    "discord.js": "^14.14.1"
+    "@discordjs/opus": "^0.9.0",
+    "@discordjs/voice": "^0.16.1",
+    "discord.js": "^14.14.1",
+    "libsodium-wrappers": "^0.7.13",
+    "node-crc": "1.3.2",
+    "prism-media": "^2.0.0-alpha.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -21,7 +20,7 @@
     "eslint": "^8.56.0",
     "eslint-config-standard": "^17.1.0",
     "rimraf": "^5.0.5",
-    "typescript": "^5.3.3",
-    "tsc-watch": "^6.0.4"
+    "tsc-watch": "^6.0.4",
+    "typescript": "^5.3.3"
   }
 }
