--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "discord.js": "^14.14.1",
     "libsodium-wrappers": "^0.7.13",
     "node-crc": "1.3.2",
+    "node-cron": "^3.0.3",
     "prism-media": "^2.0.0-alpha.0"
   },
   "devDependencies": {
+    "@types/node-cron": "^3.0.11",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "dotenv": "^16.4.1",
