--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
       "strict": true,
       "strictNullChecks": false,
       "resolveJsonModule": true,
+      "esModuleInterop": true,
       "allowSyntheticDefaultImports": true,
       "typeRoots": ["./node_modules/@types", "./types"],
       "rootDirs": [
