--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,8 @@
 {
     "MAX_RECORDING_SILENCE": 2000,
-    "MAX_RECORDING_LENGTH": 7000,
-    "SPEAK_INTERVAL": 1000
+    "MAX_RECORDING_LENGTH": 9000,
+    "MIN_RECORDING_SIZE": 8000,
+    "MAX_FILES_PER_GUILD": 200,
+    "PROBABILITY_TO_SPEAK": 0.5,
+    "SPEAK_INTERVAL": 1080000
 }
