Add special sound, change config values

--- a/src/config.json
+++ b/src/config.json
@@ -1,8 +1,10 @@
 {
     "MAX_RECORDING_SILENCE": 2000,
-    "MAX_RECORDING_LENGTH": 9000,
-    "MIN_RECORDING_SIZE": 8000,
-    "MAX_FILES_PER_GUILD": 200,
-    "PROBABILITY_TO_SPEAK": 0.5,
-    "SPEAK_INTERVAL": 1080000
+    "MAX_RECORDING_LENGTH": 10000,
+    "MIN_RECORDING_SIZE": 9500,
+    "MAX_FILES_PER_GUILD": 400,
+    "PROBABILITY_TO_SPEAK": 0.95,
+    "PROBABILITY_TO_RECORD": 0.3,
+    "PROBABILITY_TO_PLAY_SPECIAL": 0.1,
+    "SPEAK_INTERVAL": 420000
 }
