Add editable config for guilds

--- a/src/config.json
+++ b/src/config.json
@@ -3,8 +3,6 @@
     "MAX_RECORDING_LENGTH": 10000,
     "MIN_RECORDING_SIZE": 9500,
     "MAX_FILES_PER_GUILD": 500,
-    "PROBABILITY_TO_SPEAK": 0.25,
     "PROBABILITY_TO_RECORD": 0.17,
-    "PROBABILITY_TO_PLAY_SPECIAL": 0.05,
-    "SPEAK_INTERVAL": 400000
+    "PROBABILITY_TO_PLAY_SPECIAL": 0.05
 }
