Add file partinioning

--- a/src/config.json
+++ b/src/config.json
@@ -2,7 +2,9 @@
     "MAX_RECORDING_SILENCE": 2000,
     "MAX_RECORDING_LENGTH": 16000,
     "MIN_RECORDING_SIZE": 10500,
-    "MAX_FILES_PER_GUILD": 1000,
+    "MAX_FILES_PER_USER_PER_PARTITION": 30,
+    "MAX_PARTITIONS_PER_GUILD": 33,
+    "PARTITIONS_PER_SESSION": 2,
     "PROBABILITY_TO_RECORD": 0.1,
     "PROBABILITY_TO_PLAY_SPECIAL": 0.01
 }
