Record first thing after joining

--- a/src/config.json
+++ b/src/config.json
@@ -6,5 +6,6 @@
     "MAX_PARTITIONS_PER_GUILD": 33,
     "PARTITIONS_PER_SESSION": 2,
     "PROBABILITY_TO_RECORD": 0.1,
-    "PROBABILITY_TO_PLAY_SPECIAL": 0.01
+    "PROBABILITY_TO_PLAY_SPECIAL": 0.01,
+    "FRESH_PERSON_COOLDOWN_MS": 60000 
 }
